fix(User): fix validators for user create
closes #69

--- a/src/app/modules/users/user-create/user-create.component.html
+++ b/src/app/modules/users/user-create/user-create.component.html
@@ -5,10 +5,12 @@
 
     <form name="form" (ngSubmit)="f.form.valid && createNewUser(f.value)" #f="ngForm" novalidate>
 
-      <hr>
+      <br>
+      <h6 class="offset-1">{{ 'USERCREATEPAGE.SECTION_GENERAL' | translate }}</h6>
+      <hr class="col-6 offset-1">
 
       <div class="form-group row">
-        <label for="email" class="col-2 col-form-label">{{ 'USERCREATEPAGE.EMAIL' | translate }}</label>
+        <label for="email" class="col-2 offset-1 col-form-label">{{ 'USERCREATEPAGE.EMAIL' | translate }}</label>
         <div class="col-4">
           <input class="form-control" type="email" name="email" id="email" placeholder="{{ 'USERCREATEPAGE.EMAIL_PLACEHOLDER' | translate }}"
             ngModel #email="ngModel" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" minlength="4">
@@ -16,20 +18,17 @@
 
           <div *ngIf="email.errors && (email.dirty || email.touched)" class="alert alert-danger">
             <div [hidden]="!email.errors.required">
-              <li>
-                <small>{{ 'USERCREATEPAGE.EMAIL_REQUIRED' | translate }}</small>
-              </li>
+              <small>{{ 'USERCREATEPAGE.EMAIL_REQUIRED' | translate }}</small>
             </div>
+            <!--
             <div [hidden]="!email.hasErrors('pattern') || (email.touched || email.pristine && !f.submitted)">
-              <li>
-                <small>Email must contain @ and dot symbols. Example: 'email@example.com'</small>
-              </li>
-            </div>
+              <small>Email must contain @ and dot symbols. Example: 'email@example.com'</small>
+            </div>-->
             <div [hidden]="!email.errors.minlength">
-              Email must be at least 4 characters long.
+              <small>Email must be at least 4 characters long.</small>
             </div>
             <div [hidden]="!email.errors.maxlength">
-              Email cannot be more than 24 characters long.
+              <small>Email cannot be more than 24 characters long.</small>
             </div>
           </div>
         </div>
@@ -38,32 +37,28 @@
 
 
       <div class="form-group row">
-        <label for="last-name" class="col-2 col-form-label">{{ 'USERCREATEPAGE.LASTNAME' | translate }}</label>
+        <label for="last-name" class="col-2 offset-1 col-form-label">{{ 'USERCREATEPAGE.LASTNAME' | translate }}</label>
         <div class="col-4">
           <input class="form-control" type="text" name="lastName" placeholder="{{ 'USERCREATEPAGE.LASTNAME_PLACEHOLDER' | translate }}"
             id="last-name" ngModel #lastName="ngModel" required>
 
           <div *ngIf="lastName.errors && (lastName.dirty || lastName.touched)" class="alert alert-danger">
             <div [hidden]="!lastName.errors.required">
-              <li>
-                <small>{{ 'USERCREATEPAGE.LASTNAME_REQUIRED' | translate }}</small>
-              </li>
+              <small>{{ 'USERCREATEPAGE.LASTNAME_REQUIRED' | translate }}</small>
             </div>
           </div>
         </div>
       </div>
 
       <div class="form-group row">
-        <label for="first-name" class="col-2 col-form-label">{{ 'USERCREATEPAGE.FIRSTNAME' | translate }}</label>
+        <label for="first-name" class="col-2 offset-1 col-form-label">{{ 'USERCREATEPAGE.FIRSTNAME' | translate }}</label>
         <div class="col-4">
           <input class="form-control" type="text" name="firstName" placeholder="{{ 'USERCREATEPAGE.FIRSTNAME_PLACEHOLDER' | translate }}"
             id="first-name" ngModel #firstName="ngModel" required>
 
           <div *ngIf="firstName.errors && (firstName.dirty || firstName.touched)" class="alert alert-danger">
             <div [hidden]="!firstName.errors.required">
-              <li>
-                <small>{{ 'USERCREATEPAGE.FIRSTNAME_REQUIRED' | translate }}</small>
-              </li>
+              <small>{{ 'USERCREATEPAGE.FIRSTNAME_REQUIRED' | translate }}</small>
             </div>
           </div>
         </div>
@@ -71,20 +66,18 @@
 
       <br>
       <br>
-      <h6>{{ 'USERCREATEPAGE.PASSWORD' | translate }}</h6>
-      <hr>
+      <h6 class="offset-1">{{ 'USERCREATEPAGE.PASSWORD' | translate }}</h6>
+      <hr class="col-6 offset-1">
 
       <div class="form-group row">
-        <label for="password" class="col-2 col-form-label">{{ 'USERCREATEPAGE.PASSWORD' | translate }}</label>
+        <label for="password" class="col-2 offset-1 col-form-label">{{ 'USERCREATEPAGE.PASSWORD' | translate }}</label>
         <div class="col-4">
           <input class="form-control" type="password" name="password" placeholder="" id="password" [(ngModel)]="user.password" #password="ngModel"
             required>
 
           <div *ngIf="password.errors && (password.dirty || password.touched)" class="alert alert-danger">
             <div [hidden]="!password.errors.required">
-              <li>
-                <small>{{ 'USERCREATEPAGE.PASSWORD_REQUIRED' | translate }}</small>
-              </li>
+              <small>{{ 'USERCREATEPAGE.PASSWORD_REQUIRED' | translate }}</small>
             </div>
           </div>
         </div>
@@ -92,22 +85,18 @@
 
 
       <div class="form-group row">
-        <label for="confirmPassword" class="col-2 col-form-label">{{ 'USERCREATEPAGE.CONFIRMPASSWORD' | translate }}</label>
+        <label for="confirmPassword" class="col-2 offset-1 col-form-label">{{ 'USERCREATEPAGE.CONFIRMPASSWORD' | translate }}</label>
         <div class="col-4">
           <input class="form-control" type="password" name="confirmPassword" placeholder="" id="confirmPassword" #confirmPassword required>
 
           <div *ngIf="password.errors && (password.dirty || password.touched)" class="alert alert-danger">
             <div [hidden]="!password.errors.required">
-              <li>
-                <small>{{ 'USERCREATEPAGE.CONFIRMPASSWORD_REQUIRED' | translate }}</small>
-              </li>
+              <small>{{ 'USERCREATEPAGE.CONFIRMPASSWORD_REQUIRED' | translate }}</small>
             </div>
           </div>
           <div *ngIf="password != confirmPassword && (password.dirty || password.touched)" class="alert alert-danger">
             <div [hidden]="password != confirmPassword">
-              <li>
-                <small>{{ 'USERCREATEPAGE.PASSWORDSMATCH' | translate }}</small>
-              </li>
+              <small>{{ 'USERCREATEPAGE.PASSWORDSMATCH' | translate }}</small>
             </div>
           </div>
         </div>
@@ -116,13 +105,13 @@
 
       <br>
       <br>
-      <h6>{{ 'USERCREATEPAGE.SECTION_ADDITIONAL' | translate }}</h6>
-      <hr>
+      <h6 class="offset-1">{{ 'USERCREATEPAGE.SECTION_ADDITIONAL' | translate }}</h6>
+      <hr class="col-6 offset-1">
 
       <div ngModelGroup="workInfo">
 
         <div class="form-group row">
-          <label for="jobTitle" class="col-2 col-form-label">{{ 'USERCREATEPAGE.JOBTITLE' | translate }}</label>
+          <label for="jobTitle" class="col-2 offset-1 col-form-label">{{ 'USERCREATEPAGE.JOBTITLE' | translate }}</label>
           <div class="col-4">
             <input class="form-control" type="text" name="jobTitle" placeholder="{{ 'USERCREATEPAGE.JOBTITLE_PLACEHOLDER' | translate }}"
               id="jobTitle" ngModel required>
@@ -130,7 +119,7 @@
         </div>
 
         <div class="form-group row">
-          <label for="phoneNumber" class="col-2 col-form-label">{{ 'USERCREATEPAGE.PHONE_NUMBER' | translate }}</label>
+          <label for="phoneNumber" class="col-2 offset-1 col-form-label">{{ 'USERCREATEPAGE.PHONE_NUMBER' | translate }}</label>
           <div class="col-4">
             <input class="form-control" type="text" name="phoneNumber" placeholder="{{ 'USERCREATEPAGE.PHONE_NUMBER_PLACEHOLDER' | translate }}"
               id="phoneNumber" ngModel>
@@ -138,7 +127,7 @@
         </div>
 
         <div class="form-group row">
-          <label for="companyName" class="col-2 col-form-label">{{ 'USERCREATEPAGE.COMPANY' | translate }}</label>
+          <label for="companyName" class="col-2 offset-1 col-form-label">{{ 'USERCREATEPAGE.COMPANY' | translate }}</label>
           <div class="col-4">
             <input class="form-control" type="text" name="companyName" placeholder="{{ 'USERCREATEPAGE.COMPANY_PLACEHOLDER' | translate }}"
               id="companyName" ngModel>
@@ -149,8 +138,8 @@
 
 
       <div class="text-right">
-        <div class="col-6">
-          <button type="submit" class="btn btn-primary">{{ 'USERCREATEPAGE.CREATE_USER' | translate }}</button>
+        <div class="col-7">
+          <button type="submit" [disabled]="!f.form.valid" class="btn btn-primary">{{ 'USERCREATEPAGE.CREATE_USER' | translate }}</button>
         </div>
       </div>
 
