--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -1,17 +1,17 @@
 <div id="wrapper" [class.dark-theme]="themeService.theme">
-    <simple-notifications [options]="toastNotificationsOptions"></simple-notifications>
-    <app-sidebar [sidebarCollapsed]="sidebarCollapsed"></app-sidebar>
+  <!--<simple-notifications [options]="toastNotificationsOptions"></simple-notifications>-->
+  <app-sidebar [sidebarCollapsed]="sidebarCollapsed"></app-sidebar>
 
-    <div id="main" class="sidebar-full" [class.sidebar-collapsed]="sidebarCollapsed">
+  <div id="main" class="sidebar-full" [class.sidebar-collapsed]="sidebarCollapsed">
 
-        <app-header (notify)="onNotify($event)"></app-header>
+    <app-header (notify)="onNotify($event)"></app-header>
 
-        <section id="content-wrapper">
+    <section id="content-wrapper">
 
-            <div id="content">
-                <router-outlet (deactivate)="onDeactivate()"></router-outlet>
-            </div>
+      <div id="content">
+        <router-outlet (deactivate)="onDeactivate()"></router-outlet>
+      </div>
 
-        </section>
-    </div>
+    </section>
+  </div>
 </div>
