--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -1,43 +1,162 @@
-<!--
-<clr-stack-view>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-9">
+      <!--
+    <clr-stack-view>
 
-  <clr-stack-block [clrSbExpanded]="true">
-    <clr-stack-label>Terminal Checklist</clr-stack-label>
-    <clr-stack-content></clr-stack-content>
-    <clr-stack-block>
-      <clr-stack-content>Импорт валидных геозон из файла</clr-stack-content>
-    </clr-stack-block>
-    <clr-stack-block>
-      Экспорт валидных геозон
-    </clr-stack-block>
-    <clr-stack-block>
-
-
-    </clr-stack-block>
-  </clr-stack-block>
-
-  <clr-stack-block [clrSbExpanded]="true">
-    <clr-stack-label>LLD Checklist</clr-stack-label>
-    <clr-stack-content></clr-stack-content>
-    <clr-stack-block>
-      <clr-stack-label>Sub-label 4</clr-stack-label>
-      <clr-stack-content>Sub-content 4</clr-stack-content>
-    </clr-stack-block>
-    <clr-stack-block>
-      <clr-stack-label>Sub-label 5</clr-stack-label>
-      <clr-stack-content>Sub-content 5</clr-stack-content>
-    </clr-stack-block>
-  </clr-stack-block>
-</clr-stack-view>
--->
-
-<clr-datagrid>
-  <clr-dg-column>Геозоны</clr-dg-column>
+      <clr-stack-block [clrSbExpanded]="true">
+        <clr-stack-label>Terminal Checklist</clr-stack-label>
+        <clr-stack-content></clr-stack-content>
+        <clr-stack-block>
+          <clr-stack-content>Импорт валидных геозон из файла</clr-stack-content>
+        </clr-stack-block>
+        <clr-stack-block>
+          Экспорт валидных геозон
+        </clr-stack-block>
+        <clr-stack-block>
 
 
-  <clr-dg-row *ngFor="let user of users">
-    <clr-dg-cell>{{user.name}}</clr-dg-cell>
-  </clr-dg-row>
+        </clr-stack-block>
+      </clr-stack-block>
 
-  <clr-dg-footer>{{users.length}}</clr-dg-footer>
-</clr-datagrid>
+      <clr-stack-block [clrSbExpanded]="true">
+        <clr-stack-label>LLD Checklist</clr-stack-label>
+        <clr-stack-content></clr-stack-content>
+        <clr-stack-block>
+          <clr-stack-label>Sub-label 4</clr-stack-label>
+          <clr-stack-content>Sub-content 4</clr-stack-content>
+        </clr-stack-block>
+        <clr-stack-block>
+          <clr-stack-label>Sub-label 5</clr-stack-label>
+          <clr-stack-content>Sub-content 5</clr-stack-content>
+        </clr-stack-block>
+      </clr-stack-block>
+    </clr-stack-view>
+    -->
+      <button class="btn btn-primary">
+        <clr-icon shape="plus"></clr-icon>
+        Add
+      </button>
+
+      <h4>Geo zones</h4>
+      <clr-datagrid>
+        <!--
+        <clr-dg-action-bar>
+          <button class="btn btn-sm btn-secondary" type="button">
+            <clr-icon shape="plus"></clr-icon> Add</button>
+        </clr-dg-action-bar>
+      -->
+        <!-- [(clrDgSelected)]="users" -->
+        <clr-dg-column>Title
+        </clr-dg-column>
+        <!--
+        <clr-dg-column>
+          Status
+        </clr-dg-column>
+      -->
+
+        <clr-dg-row *ngFor="let user of users">
+          <!--
+        <clr-dg-cell style="display: flex;">
+            <clr-checkbox></clr-checkbox>
+          <span style="align-self: center;">{{user.name}}</span>
+        </clr-dg-cell>
+      -->
+          <clr-dg-cell>
+            {{user.name}}
+          </clr-dg-cell>
+
+          <!--
+          <clr-dg-cell>
+            <div class="select">
+              <select id="selects_1">
+                <option>Untested</option>
+                <option>In Progress</option>
+                <option>Passed</option>
+                <option>Failed</option>
+                <option>Skipped</option>
+              </select>
+            </div>
+          </clr-dg-cell>
+        -->
+          <!--
+        <clr-dg-action-overflow>
+          <button class="action-item" (click)="users">Edit</button>
+          <button class="action-item" (click)="users">Delete</button>
+        </clr-dg-action-overflow>
+      -->
+        </clr-dg-row>
+
+        <!--<clr-dg-footer>{{users.length}}</clr-dg-footer>-->
+      </clr-datagrid>
+
+
+      <h4>Geo zones</h4>
+      <clr-datagrid>
+        <!--
+        <clr-dg-action-bar>
+          <button class="btn btn-sm btn-secondary" type="button">
+            <clr-icon shape="plus"></clr-icon> Add</button>
+        </clr-dg-action-bar>
+      -->
+        <!-- [(clrDgSelected)]="users" -->
+        <clr-dg-column>Title
+        </clr-dg-column>
+        <!--
+      <clr-dg-column>
+        Status
+      </clr-dg-column>-->
+
+
+        <clr-dg-row *ngFor="let user of users">
+          <!--
+        <clr-dg-cell style="display: flex;">
+            <clr-checkbox></clr-checkbox>
+          <span style="align-self: center;">{{user.name}}</span>
+        </clr-dg-cell>
+      -->
+          <clr-dg-cell>
+            {{user.name}}
+          </clr-dg-cell>
+          <!--
+        <clr-dg-cell>
+          <div class="select">
+            <select id="selects_1">
+              <option>Untested</option>
+              <option>In Progress</option>
+              <option>Passed</option>
+              <option>Failed</option>
+              <option>Skipped</option>
+            </select>
+          </div>
+        </clr-dg-cell>-->
+          <!--
+        <clr-dg-action-overflow>
+          <button class="action-item" (click)="users">Edit</button>
+          <button class="action-item" (click)="users">Delete</button>
+        </clr-dg-action-overflow>
+      -->
+        </clr-dg-row>
+
+        <!--<clr-dg-footer>{{users.length}}</clr-dg-footer>-->
+      </clr-datagrid>
+
+    </div>
+
+
+    <div class="col-sm-12 col-md-3">
+      <clr-tree-node *ngFor="let directory of rootDirectory">
+        <clr-icon [attr.shape]="directory.icon"></clr-icon>
+        {{directory.name}}
+        <ng-template [(clrIfExpanded)]="directory.expanded">
+          <clr-tree-node *ngFor="let file of directory.files">
+            <button (click)="openFile(directory.name, file.name)" class="clr-treenode-link" [class.active]="file.active">
+              <clr-icon [attr.shape]="file.icon"></clr-icon>
+              {{file.name}}
+            </button>
+          </clr-tree-node>
+        </ng-template>
+      </clr-tree-node>
+    </div>
+  </div>
+</div>
