--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,24 @@
 <div class="login-wrapper">
-  <form class="login" novalidate>
+  <form class="login" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
     <label class="title">
       <h3 class="welcome">Welcome to</h3>
       Test Storage
     </label>
     <div class="login-group">
-      <input class="username" type="text" id="login_username" placeholder="Username">
-      <input class="password" type="password" id="login_password" placeholder="Password">
+      <input class="username" type="text" id="username" name="username" [(ngModel)]="user.username" #username="ngModel" required
+        placeholder="Username">
+      <input class="password" type="password" id="password" name="password" [(ngModel)]="user.password" #password="ngModel" required
+        placeholder="Password">
       <div class="checkbox">
         <input type="checkbox" id="rememberme">
         <label for="rememberme">
           Remember me
         </label>
       </div>
-      <!--<div class="error active">
-        Invalid user name or password
-      </div>-->
-      <button type="submit" (click)="login()" class="btn btn-primary">LOGIN</button>
+      <div *ngIf="error" class="error active">
+        {{ error }}
+      </div>
+      <button type="submit" class="btn btn-primary">LOGIN</button>
       <a href="javascript://" class="signup">Register</a>
     </div>
   </form>
