feat(settings): add app settings

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -19,6 +19,8 @@
       <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
         <a routerLink="/profile" clrDropdownItem>Profile</a>
         <div class="dropdown-divider"></div>
+        <a routerLink="/settings" clrDropdownItem>Settings</a>
+        <div class="dropdown-divider"></div>
         <a (click)="logout()" clrDropdownItem>Log out</a>
       </clr-dropdown-menu>
     </clr-dropdown>
