feat(settings): add user management component

--- a/src/app/project-layout/sidebar/sidebar.component.html
+++ b/src/app/project-layout/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
     Reports
   </a>
 
-  <a clrVerticalNavLink class="nav-bottom" routerLink="./settings" routerLinkActive="active">
+  <a clrVerticalNavLink routerLink="./settings" routerLinkActive="active">
     <clr-icon clrVerticalNavIcon shape="cog"></clr-icon>
     Settings
   </a>
