--- a/src/app/projects/project-wizard/project-wizard.component.html
+++ b/src/app/projects/project-wizard/project-wizard.component.html
@@ -1,6 +1,6 @@
 <!--<button class="btn btn-primary" (click)="projectWizard = !projectWizard;">Open</button>-->
 
-<clr-wizard #wizardxl [(clrWizardOpen)]="projectWizard">
+<clr-wizard #wizardxl [(clrWizardOpen)]="opened">
   <clr-wizard-title>Project Creation Wizard</clr-wizard-title>
 
   <clr-wizard-button [type]="'cancel'">Cancel</clr-wizard-button>
