--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,100 +1,131 @@
 <div class="content-area">
-  <app-project-wizard></app-project-wizard>
+
+  <app-project-wizard [opened]="projectWizardOpened"></app-project-wizard>
+  <!--
   <app-system-wizard></app-system-wizard>
-  <div class="row">
-    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-      <a routerLink="./1" class="card clickable">
-        <div class="card-img">
-          <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
-        </div>
-        <div class="card-block">
-          <p class="card-text">
+  -->
+  <div *ngIf="projects.length > 0; then existProjects else noExistProjects"></div>
+  <ng-template #existProjects>
+    <div class="row">
+      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
 
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
-            eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
 
-          </p>
-        </div>
-      </a>
+        <a routerLink="./1" class="card clickable">
+          <div class="card-img">
+            <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
+          </div>
+          <div class="card-block">
+            <p class="card-text">
+
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
+              eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
+
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <a routerLink="./2" class="card clickable">
+          <div class="card-img">
+            <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
+          </div>
+          <div class="card-block">
+            <p class="card-text">
+
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
+              eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
+
+            </p>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <a routerLink="./3" class="card clickable">
+          <div class="card-img">
+            <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
+          </div>
+          <div class="card-block">
+            <p class="card-text">
+
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
+              eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
+
+            </p>
+          </div>
+        </a>
+      </div>
     </div>
-    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-      <a routerLink="./2" class="card clickable">
-        <div class="card-img">
-          <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
-        </div>
-        <div class="card-block">
-          <p class="card-text">
 
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
-            eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
+    <div class="row">
+      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <a href="..." class="card clickable">
+          <div class="card-img">
+            <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
+          </div>
+          <div class="card-block">
+            <p class="card-text">
 
-          </p>
-        </div>
-      </a>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
+              eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
+
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <a href="..." class="card clickable">
+          <div class="card-img">
+            <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
+          </div>
+          <div class="card-block">
+            <p class="card-text">
+
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
+              eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
+
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <a href="..." class="card clickable">
+          <div class="card-img">
+            <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
+          </div>
+          <div class="card-block">
+            <p class="card-text">
+
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
+              eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
+
+            </p>
+          </div>
+        </a>
+      </div>
     </div>
 
-    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-      <a routerLink="./3" class="card clickable">
-        <div class="card-img">
-          <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
-        </div>
-        <div class="card-block">
-          <p class="card-text">
+  </ng-template>
 
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
-            eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
 
-          </p>
+
+
+
+
+
+  <ng-template #noExistProjects>
+    <div class="noexist-wrapper">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+        <div class="no-project">
+          <img src="assets/add-project.png">
+          <h4>You have not created Projects yet.</h4>
+          <p class="tips">Tap the 'Create Project' button to get started</p>
+          <a (click)="create();" class="btn btn-primary">Create Project</a>
         </div>
-      </a>
+
+      </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-      <a href="..." class="card clickable">
-        <div class="card-img">
-          <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
-        </div>
-        <div class="card-block">
-          <p class="card-text">
-
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
-            eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
-
-          </p>
-        </div>
-      </a>
-    </div>
-    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-      <a href="..." class="card clickable">
-        <div class="card-img">
-          <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
-        </div>
-        <div class="card-block">
-          <p class="card-text">
-
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
-            eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
-
-          </p>
-        </div>
-      </a>
-    </div>
-    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
-      <a href="..." class="card clickable">
-        <div class="card-img">
-          <img src="https://vmware.github.io/clarity/assets/images/documentation/cards/placeholder_350x150.png" alt="..." />
-        </div>
-        <div class="card-block">
-          <p class="card-text">
-
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci consectetur magnam eos amet sit rem. Ipsam maiores incidunt
-            eum quasi enim! Corporis sunt nisi totam molestias quam commodi maxime mollitia.
-
-          </p>
-        </div>
-      </a>
-    </div>
-  </div>
+  </ng-template>
 </div>
