--- a/src/app/project-layout/project-layout.component.css
+++ b/src/app/project-layout/project-layout.component.css
@@ -2,6 +2,10 @@
     height: calc(100vh - 60px);
 }
 
+.content-area {
+  width: calc(100vw - 240px);
+}
+
 .sidenav {
     z-index: 9999 !important;
 }
