fix(ui): better mobile ui support

--- a/src/app/project-layout/project-layout.component.css
+++ b/src/app/project-layout/project-layout.component.css
@@ -1,9 +1,6 @@
 .main-container {
     height: calc(100vh - 60px);
-}
-
-.content-area {
-  width: calc(100vw - 240px);
+    width: 100vw;
 }
 
 .sidenav {
