--- a/src/app/test-executions/test-executions.component.html
+++ b/src/app/test-executions/test-executions.component.html
@@ -10,7 +10,7 @@
         </button>
 
         <div class="row">
-          <div *ngFor="let testSuite of testSuites" class="col-xs-12 col-sm-3">
+          <div *ngFor="let testSuite of testSuites" class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <a routerLink="./1" class="card clickable">
               <div class="card-block">
                 <h4 class="card-title">{{ testSuite.title }}</h4>
