--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,8 +1,13 @@
+.content-area {
+    width: 100vw;
+    height: calc(100vh - 60px);
+}
+
 .noexist-wrapper {
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 120px);
     align-items: center;
+    align-self: center;
     justify-content: center;
 }
 
