--- a/src/app/test-executions/test-executions.component.html
+++ b/src/app/test-executions/test-executions.component.html
@@ -34,7 +34,7 @@
     <clr-tab-content *clrIfActive>
       <div class="content-area">
         <div class="row">
-          <div class="col-xs-12 col-sm-4">
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="card">
               <div class="card-block">
                 <h4 class="card-title">Corporate Portal Regression Suite</h4>
