--- a/src/app/system-wizard/system-wizard.component.html
+++ b/src/app/system-wizard/system-wizard.component.html
@@ -14,15 +14,15 @@
       <section class="form-block">
         <label>Work Type</label>
         <div class="radio">
-          <input type="radio" name="gridRadios" id="checkrads_9">
+          <input type="radio" name="gridRadios" id="checkrads_9" checked>
           <label for="checkrads_9">In-house</label>
           <a href="" role="tooltip" aria-haspopup="true" class="tooltip tooltip-lg tooltip-bottom-right">
             <clr-icon shape="info-circle" size="24"></clr-icon>
             <span class="tooltip-content">Development without assistance from outside an organization, internally</span>
           </a>
         </div>
-        <div class="radio">
-          <input type="radio" name="gridRadios" id="checkrads_10" checked>
+        <div class="radio disabled">
+          <input type="radio" name="gridRadios" id="checkrads_10" disabled>
           <label for="checkrads_10">Outsource</label>
           <a href="" role="tooltip" aria-haspopup="true" class="tooltip tooltip-lg">
             <clr-icon shape="info-circle" size="24"></clr-icon>
