--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,25 @@
 <div class="login-wrapper">
   <form class="login" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
     <label class="title">
-      <h3 class="welcome">Welcome to</h3>
+      <h3 class="welcome">{{ 'LOGINPAGE.WELCOME' | translate }}</h3>
       Test Storage
     </label>
     <div class="login-group">
       <input class="username" type="text" id="username" name="username" [(ngModel)]="user.username" #username="ngModel" required
-        placeholder="Username">
+        placeholder="{{ 'LOGINPAGE.USERNAME' | translate }}">
       <input class="password" type="password" id="password" name="password" [(ngModel)]="user.password" #password="ngModel" required
-        placeholder="Password">
+        placeholder="{{ 'LOGINPAGE.PASSWORD' | translate }}">
       <div class="checkbox">
         <input type="checkbox" id="rememberme">
         <label for="rememberme">
-          Remember me
+          {{ 'LOGINPAGE.REMEMBER_ME' | translate }}
         </label>
       </div>
       <div *ngIf="error" class="error active">
         {{ error }}
       </div>
-      <button type="submit" class="btn btn-primary">LOGIN</button>
-      <a href="javascript://" class="signup">Register</a>
+      <button type="submit" class="btn btn-primary">{{ 'LOGINPAGE.LOGIN_BUTTON' | translate }}</button>
+      <a href="javascript://" class="signup">{{ 'LOGINPAGE.REGISTER_BUTTON' | translate }}</a>
     </div>
   </form>
 </div>
